--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,29 @@
+body {
+  overflow-anchor: none;
+}
 
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  z-index: 2000;
+}
+
+.logout {
+  cursor: pointer;
+}
+
+.card > img {
+  height: 250px;
+  aspect-ratio: 16/9;
+  object-fit: cover;
+}
+
+.post-image > img {
+  max-height: 500px;
+  width: 100%;
+  object-fit: cover;
+}
